--- a/public/vista/login.html
+++ b/public/vista/login.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Iniciar Sesion</title>
-        <link rel="stylesheet" rel="stylesheet" href="">
+        <link rel="stylesheet" rel="stylesheet" href="../../css/estilo_login.css">
     </head>
+    
     <body>
         <form class="box" id="formulario012" method="POST" action="../controladores/login.php">
-            <h1>Login</h1>
-            <input type="text" id="correo" name="correo" value="" placeholder="Ingrese el correo..." class="login">
-            <input type="password" id="contrasena" name="contrasena" value="" placeholder="Ingrese su Contraseña..." class="login">
-            <input type="submit" id="login" name="login" value="Iniciar Sesion" class="boton">
-            <input type="button" id="registrar" name="registrar" value="Registrate" onclick="location.href='crear_usuario.html'" class="boton">
+            <h1>Iniciar Sesión</h1>
+            <input type="text" class="ingresar" id="correo" name="correo" value="" placeholder="Ingrese el correo..." class="login"></br>
+            <input type="password" class="ingresar" id="contrasena" name="contrasena" value="" placeholder="Ingrese su Contraseña..." class="login"></br>
+            <input type="submit" class="botones" id="login" name="login" value="Iniciar Sesion" class="boton"></br>
+            <input type="button" class="botones" id="registrar" name="registrar" value="Registrarse    " onclick="location.href='crear_usuario.html'" class="boton">
         </form>
     </body>
 </html>
