--- a/public/vista/crear_usuario.html
+++ b/public/vista/crear_usuario.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Crear Usuario</title>
-        <link rel="stylesheet" rel="stylesheet" href="">
+        <link rel="stylesheet" rel="stylesheet" href="../../css/estilo_formulario.css">
     </head>
     <body>
         <form class="box_registro" method="POST" action="../controladores/crear_usuario.php">
-            <h1>Registrate</h1>
+            <h1>Registrarse</h1>
             <input type="text" id="cedula" name="cedula" value="" placeholder="Ingrese el numero de cedula..." required class="registro">
             <br>
             
@@ -32,7 +32,7 @@
             <input type="password" id="contrasena" name="contrasena" value="" placeholder="Ingrese su Contraseña..." required class="registro">
             <br>
             <input type="submit" id="crear" name="crear" value="Aceptar" class="boton">
-            <input type="reset" id="cancelar" name="cancelar" value="Cancelar" class="boton" onclick="location.href='login.html'">
+            <input type="reset" id="cancelar" name="cancelar" value="←" class="boton" onclick="location.href='login.html'">
         </form>
     </body>
 </html>
